# Makoto

./: .gitleaksignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  __init__.py  __main__.py  _dispatch.py  _dispatch_configchange.py  _dispatch_shim.sh  _testDelta.py  ackblock.py  audit.py  checks.py  citations.py  commitments.py  configchange_verdict.py  db.py  install.py  ledger.py  lexicons.py  plan.py  pyproject.toml  receipt.py  release_notes_v2.0.0.md  retraction.py  schema.py  state.py  wire.py
.claude-plugin/: marketplace.json  plugin.json
.github/: tag-map.json
canon/: __init__.py  byte_identity.py
checks/: __init__.py  _canonAtoms.py  _declared.py  _failureClassifier.py  _fpHarness.py  _loader.py  _planNode.py  _primitives.py  _shared.py  canonFingerprints.py  canonFingerprintsAdvisory.py  canonTimeoutRecur.py  certNoneMode.py  certReqsNone.py  certVerifyDisabled.py  claimedProduceAbsent.py  contractOrder.py  deadPureStatement.py  deferredCheckboxTheater.py  envGatedAudit.py  fabricatedCommitSha.py  fabricatedToolAction.py  falseGreenClaim.py  forbiddenLocation.py  hollowTest.py  identicalRetryInterdiction.py  illusoryAuthorshipTrailer.py  integritySuppressionFlag.py  jwtNoneAlg.py  jwtSignatureDisabled.py  namedTestTeeth.py  paramikoHostKeyWeakened.py  phantomCitation.py  selfMuteGuard.py  selfWiredCheck.py  silentlyDroppedCommitment.py  staleEstablisher.py  stalePytestCache.py  timingUnsafeCompare.py  undeclaredFalsifiable.py  (+6 more)
commands/: patterns.md  show.md  status.md
data/: patterns.toml  purpose.toml
docs/: CHAIN-FORMAT-v1.md  CITATIONS.md  MAKOTO-CONVENTIONS.md  SPIRIT.md  THREAT-MODEL.md
hooks/: hooks.json
lib/: __init__.py  claims.py  factories.py  io.py
makoto/: __init__.py  __main__.py  _dispatch.py  _dispatch_configchange.py  _dispatch_shim.sh  install.py
prechecks/: precheck_1_1.py  precheck_1_2.py  precheck_1_21.py  precheck_1_22.py  precheck_1_23.py  precheck_1_26.py  precheck_1_27.py  precheck_1_28.py  precheck_1_29.py  precheck_1_30.py  precheck_1_31.py  precheck_1_32.py  precheck_1_33.py  precheck_1_34.py  precheck_1_4.py  precheck_1_5.py  precheck_1_6.py  precheck_1_9.py
record/: db.py  (+3 more)
(+271 files in other folders)
