[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "makoto"
version = "1.3.1"
description = "Integrity layer for Claude Code agents — declarative pattern catalog + reader"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "skill-labV2"}]
license = {text = "Apache-2.0"}
keywords = ["claude-code", "guardrails", "integrity", "hooks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/skill-labV2/makoto"

[tool.setuptools]
package-dir = {"makoto" = "."}
packages = ["makoto"]
include-package-data = true

[tool.setuptools.package-data]
makoto = ["data/*.toml"]

[tool.setuptools.exclude-package-data]
makoto = ["tests/*", "docs/*", "*.bak"]
