[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "makoto"
version = "2.0.0"
description = "Integrity hook for Claude Code — holds the agent's claims against its own logged deeds and blocks faked checks; every check ships at measured zero false positives"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Clear-Sights"}]
license = {text = "Apache-2.0"}
keywords = ["claude-code", "guardrails", "integrity", "hooks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Clear-Sights/Makoto"

[tool.setuptools]
package-dir = {"makoto" = "makoto"}
packages = ["makoto"]
include-package-data = true

[tool.setuptools.package-data]
makoto = ["data/*.toml"]

[tool.setuptools.exclude-package-data]
makoto = ["tests/*", "docs/*", "*.bak"]
